--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
 apply plugin: 'com.google.gms.google-services'
+
+apply plugin: 'com.livinglifetechway.quickpermissions_plugin'
 
 android {
     compileSdkVersion 28
@@ -44,6 +47,18 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    // circle image view
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    // QR
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+
+
+    // design
+    implementation 'com.android.support:design:28.0.0'
 }
 
-apply plugin: 'com.google.gms.google-services'
