Job Detail view is working, you can add a price to your gig nad details. Fixed the UI code, almost ready to implement applying to a job

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".JobDetailActivity"/>
         <activity android:name=".CreateMailActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".MainActivity"
