--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -57,8 +57,11 @@ dependencies {
     // QR
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 
-
     // design
     implementation 'com.android.support:design:28.0.0'
-}
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
+    //Kens Burns
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+
+}
