--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".JobDetailActivity"/>
         <activity android:name=".CreateMailActivity"/>
         <activity android:name=".RegisterActivity"/>
+        <activity android:name=".EditBioActivity"/>
         <activity android:name=".MainActivity"
                   android:windowSoftInputMode="stateHidden|adjustPan"/>
 
